--- a/public/deniel_blog.css
+++ b/public/deniel_blog.css
@@ -67,6 +67,15 @@
     display: flex;
   }
 
+  #aboutme_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 15%;
+  }
+  .aboutme_text {
+    margin: 5px;
+  }
   aside {
     width: 20%;
     padding-right: 20px;
@@ -170,19 +179,24 @@
     justify-content: space-between;
     margin-bottom: 65px;
   }
-
+  #theme_album {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 65px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
 
   #part1 {
 
   }
   .topic_box2, .topic_box3, .topic_box4{
     height: 35vh;
-    background-image:  url('/img/tung.jpg');
     background-size: cover;
-    /* background-color: var(--mid); */
     padding: 20px;
     border-radius: 20px;
   }
+
   .topic_box2 {
     width: 48%;
   }  
