--- a/public/deniel_blog.css
+++ b/public/deniel_blog.css
@@ -254,14 +254,10 @@
   .admin_panel_album{
     width: 100%;
     height: 65vh;
-    background-color: red;
   }
   .admin_panel_article{
     width: 100%;
     height: 65vh;
-  }
-  #admin_window{
-    
   }
 
   #admin_add_btn {
@@ -396,8 +392,86 @@
     box-shadow: 8px 8px 9px -8px black;    
     font-weight: bold;
     transition:  0.3s ease;
-    
   }
+
+  /* admin相簿 */
+  #admin_album{
+    background-color: var(--mid);
+    border-radius: 7px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    padding: 5px;
+  }
+  #admin_album_info{
+    width: 20%;
+  }
+  #admin_album_back_img{
+    width: 100%;
+    border-radius: 7px;
+  }
+  #admin_album_context, #admin_album_title{
+    width: 99%;
+    background-color: var(--light);
+    border: none;
+    border-radius: 7px;
+    height: 4vh;
+    margin-bottom: 1vh;
+  }
+  #admin_album_control{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  #admin_album_check, #admin_album_delete{
+    width: 49%;
+    height: 4vh;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    color: var(--white);
+    transition:  0.3s ease;
+  }
+  #admin_album_check{
+    background-color: #079600;
+  }
+  #admin_album_delete{
+    background-color: #960000;
+  }
+  #admin_album_delete:hover, #admin_album_check:hover{
+    box-shadow: 8px 8px 9px -8px black;    
+    font-weight: bold;
+    transition:  0.3s ease;
+  }
+  #admin_album_pictures{
+    margin-left: 5%;
+    width: 79%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  #admin_album_pictures_in{
+    width: 24%;
+  }
+  .admin_album_picture{
+    width: 100%;
+    border: none;
+    border-radius: 7px;
+    background-color: var(--mid);
+  }
+  .admin_album_picture_in{
+    border-radius: 7px;
+    width: 100%;
+
+  }
+  /* admin相簿 */
+
+
+
+
+
 
   footer {
     display: flex;
